# openapi/specification.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/api/accounts/{id}": {
+    "/api/v1/accounts/{id}": {
       "get": {
         "tags": [
           "account-controller"
@@ -103,7 +103,7 @@
         }
       }
     },
-    "/api/transfers": {
+    "/api/v1/transfers": {
       "get": {
         "tags": [
           "transfer-controller"
@@ -154,7 +154,7 @@
         }
       }
     },
-    "/api/accounts": {
+    "/api/v1/accounts": {
       "get": {
         "tags": [
           "account-controller"
@@ -205,7 +205,7 @@
         }
       }
     },
-    "/api/transfers/{id}": {
+    "/api/v1/transfers/{id}": {
       "get": {
         "tags": [
           "transfer-controller"
